--- a/force-app/main/default/pages/CastorTemplate2017.page
+++ b/force-app/main/default/pages/CastorTemplate2017.page
@@ -6,212 +6,40 @@ Created by Thaddaeus Dahlberg on 10/25/2017.
 -->
 
 <apex:page id="CastorTemplate2017" lightningStyleSheets="true" sidebar="false" showHeader="false" standardStylesheets="false" cache="false" applyHtmlTag="false">
-    <apex:slds />
-    <html>
+    <apex:slds/>
+    <html class="no-js" lang="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width"/>
         <title>
             <apex:insert name="metaPageTitle"/>
         </title>
-        <script src="https://static.stthomas.edu/ust-style/dist2/js/ust-full.min.js" type="text/javascript"></script>
-        <script src="https://static.stthomas.edu/ust-style/dist-castor3/js/castor-full.js" type="text/javascript"></script>
-        <script src="{!$Resource.CastorStyles2017}" type="text/javascript"></script>
-        <link class="user" href="https://static.stthomas.edu/trueno/ust-fonts.css" rel="stylesheet" type="text/css"/>
-        <link class="user" href="https://static.stthomas.edu/ust-style/dist2/style-sheets/ust.min.css" rel="stylesheet" type="text/css"/>
-        <link class="user" href="https://static.stthomas.edu/ust-style/dist-castor3/style-sheets/castor-full.min.css" rel="stylesheet" type="text/css"/>
-        <link class="user" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-<!--        <link class="user" href="https://static.stthomas.edu/undergraduate-admissions/js/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css"/>-->
-        <link class="user" href="{!$Resource.CastorScripts2017}" rel="stylesheet" type="text/css"/>
-        <link rel="apple-touch-icon" sizes="57x57" href="//www.stthomas.edu/apple-icon-57x57.png"/>
-        <link rel="apple-touch-icon" sizes="60x60" href="//www.stthomas.edu/apple-icon-60x60.png"/>
-        <link rel="apple-touch-icon" sizes="72x72" href="//www.stthomas.edu/apple-icon-72x72.png"/>
-        <link rel="apple-touch-icon" sizes="76x76" href="//www.stthomas.edu/apple-icon-76x76.png"/>
-        <link rel="apple-touch-icon" sizes="114x114" href="//www.stthomas.edu/apple-icon-114x114.png"/>
-        <link rel="apple-touch-icon" sizes="120x120" href="//www.stthomas.edu/apple-icon-120x120.png"/>
-        <link rel="apple-touch-icon" sizes="144x144" href="//www.stthomas.edu/apple-icon-144x144.png"/>
-        <link rel="apple-touch-icon" sizes="152x152" href="//www.stthomas.edu/apple-icon-152x152.png"/>
-        <link rel="apple-touch-icon" sizes="180x180" href="//www.stthomas.edu/apple-icon-180x180.png"/>
-        <link rel="icon" type="image/png" sizes="192x192" href="//www.stthomas.edu/android-icon-192x192.png"/>
-        <link rel="icon" type="image/png" sizes="32x32" href="//www.stthomas.edu/favicon-32x32.png"/>
-        <link rel="icon" type="image/png" sizes="96x96" href="//www.stthomas.edu/favicon-96x96.png"/>
-        <link rel="icon" type="image/png" sizes="16x16" href="//www.stthomas.edu/favicon-16x16.png"/>
-        <link rel="manifest" href="//www.stthomas.edu/manifest.json"/>
-        <meta name="msapplication-TileColor" content="#510C76"/>
-        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png"/>
-        <meta name="theme-color" content="#510C76"/>
-        <meta name="msapplication-navbutton-color" content="#510C76"/>
-        <meta name="apple-mobile-web-app-status-bar-style" content="#510C76"/>
-        <meta name="viewport" content="width=device-width"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+        <style>
+            #loading .background {
+                background-image: url({!URLFOR($Resource.SummitEventsAssets, '/img/loading-summit_events.gif')}) !important;
+                width: 160px;
+                height: 160px;
+            }
+
+            .slds-col img {
+                max-width: 99%;
+            }
+        </style>
         <apex:insert name="scriptsHead"/>
-        <!-- Google Tag Manager -->
-        <script>(function (w, d, s, l, i) {
-                w[l] = w[l] || [];
-                w[l].push({
-                    'gtm.start':
-                        new Date().getTime(), event: 'gtm.js'
-                });
-                var f = d.getElementsByTagName(s)[0],
-                    j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-                f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-KHFMKX');</script>
-        <!-- End Google Tag Manager -->
-
-
-        <!-- Google Tag Manager -->
-        <script>(function (w, d, s, l, i) {
-                w[l] = w[l] || [];
-                w[l].push({
-                    'gtm.start':
-                        new Date().getTime(), event: 'gtm.js'
-                });
-                var f = d.getElementsByTagName(s)[0],
-                    j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-                f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-TJ6DZKM');
-        </script>
-        <!-- End Google Tag Manager -->
     </head>
     <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHFMKX"
-                height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TJ6DZKM" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
-    <nav class="tab-navigation" id="access" role="navigation">
-        <a href="#content" tabindex="1">Skip to primary content</a>
-    </nav>
-    <header>
-        <div id="ustTopBarWrap" class="ust-row">
-            <div class="ust-column" id="iconSearchMenu">
-                <a class="st-thomas-logo" href="http://www.stthomas.edu/">
-                    University of St. Thomas &ndash; Minnesota &ndash;
-                    A private, Catholic liberal arts university
-                </a>
+    <div class="slds-scope">
+        <div class="slds-grid slds-grid_align-center">
+            <div class="slds-col slds-size_1-of-1" style="max-width:1024px;">
+                <!--[if IE]>
+                <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+                <![endif]-->
+                <apex:insert name="sectionNav"/>
+                <apex:insert name="body"/>
+                <apex:insert name="footer"/>
             </div>
         </div>
-        <script>
-            $(document).ready(function () {
-                ust.init();
-            });
-        </script>
-    </header>
-    <header>
-        <div id="mainHeaderWrap">
-            <div class="purple-bar pb-one-level ">
-                <div class="white-bar-wrap row">
-                    <div class="white-bar">
-                        <h1 style="display:none;">
-                            <apex:insert name="pageTitle"/>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-            <nav id="sectionNav">
-                <div class="site-navigation-wrap">
-                    <ul class="site-navigation row" id="topNavBar">
-                        <li><h3>
-                                <a href="javascript:;"> Site Navigation</a>
-                            </h3>
-                            <ul class="castor-first-level-links">
-                                <apex:insert name="sectionNav"/>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <script>
-                    $("#topNavBar").navBar();
-                </script>
-                <div class="breadcrumbs clearfix">
-                    <div class="breadcrumbs-inner row clearfix">
-                        <div class="column"></div>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </header>
-    <main id="content">
-        <div class="castor-top">
-            <div class="row">
-                <div class="column">
-                    <div class="slds-scope">
-                        <apex:insert name="body"/>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <apex:insert name="footer">
-            <div id="ustFooterWrap" class="waves" itemscope="" itemtype="http://schema.org/Organization">
-                <div id="ustFooter" class="ust-row ust-footer">
-                    <div id="ustFooterPrimary" class="ust-row">
-                        <div class="ust-column footer-split-wrap">
-                            <ul class="footer-split-left">
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Admissions" href="//www.stthomas.edu/admissions/">Admissions</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Students" href="//www.stthomas.edu/students/">Students</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Alumni" href="http://alumni.stthomas.edu/s/904/start.aspx">Alumni</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Faculty Staff" href="//www.stthomas.edu/facultyandstaff/">Faculty &amp; Staff</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Parents" href="//www.stthomas.edu/students/">Parents</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Visitors" href="https://www.stthomas.edu/visitors/">Visitors</a></li>
-                            </ul>
-                            <ul class="footer-split-right">
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Directories" href="//www.stthomas.edu/directories/">Directory</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="AtoZ" href="//www.stthomas.edu/atoz/">A-Z Listing</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="News" href="//www.stthomas.edu/news/">News</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Events" href="//www.stthomas.edu/events/">Events</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Sports" href="http://tommiesports.com/">Sports</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Make a Gift" href="https://webapp.stthomas.edu/onlinegiving/">Make a Gift</a></li>
-                            </ul>
-
-                        </div>
-
-                        <div class="ust-column ust-social-icon-wrap">
-                            <div class="ust-social-icons-center clearfix">
-                                <a href="http://www.facebook.com/UofStThomasMN/" class="ust-social-icon ust-facebook"><span>FaceBook, Connect with UST on</span></a> <a href="http://twitter.com/UofStThomasMN/" class="ust-social-icon ust-twitter"><span>Twitter, Connect with UST on</span></a> <a href="https://plus.google.com/+uofstthomasmn/posts/"
-                                                                                                                                                                                                                                                                                                      class="ust-social-icon ust-google-plus"><span>Google Plus, Connect with UST on</span></a>
-                                <a href="http://www.youtube.com/universityofstthomas/" class="ust-social-icon ust-youtube"><span>YouTube, Connect with UST on</span></a> <a href="http://www.pinterest.com/uofstthomasmn/" class="ust-social-icon ust-pintress"><span>Pintress, Connect with UST on</span></a> <a href="http://instagram.com/uofstthomasmn#"
-                                                                                                                                                                                                                                                                                                                  class="ust-social-icon ust-intagram"><span>Instagram, Connect with UST on</span></a>
-                            </div>
-                        </div>
-
-                        <div class="ust-footer-column-3 ust-column small-spacing">
-                            <ul>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Maps &amp; Directions" href="//www.stthomas.edu/campusmaps/">Maps &amp; Directions</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Virtual Tour" href="//www.stthomas.edu/admissions/undergraduate/visit/virtualtour/">Virtual Tour</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Emergency" href="//www.stthomas.edu/ustcares/">Emergency</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="Jobs at UST" href="//www.stthomas.edu/jobsatust">Jobs at UST</a></li>
-                                <li><a data-category="Global Footer Link" data-action="Click" data-label="EO Statement" href="//www.stthomas.edu/policies/general/equalemployment/">EO Statement</a></li>
-                            </ul>
-                        </div>
-                        <div class="ust-footer-column-4 ust-column ust-address small-spacing">
-						<span itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress"> <span class="ust-footer-row" itemprop="name">University of St. Thomas</span> <span class="ust-footer-row" itemprop="streetAddress">2115 Summit Avenue</span> <span class="ust-footer-row"><span itemprop="addressLocality">Saint Paul</span>, <span itemprop="addressRegion">Minnesota</span> <span
-                                        itemprop="postalCode">55105</span>, <span itemprop="addressCountry">USA</span></span>
-						</span> <a class="ust-footer-row" data-category="Global Footer Link" data-action="CAll UST" data-label="Telephone" itemprop="telephone" href="tel:+16519625000">1 (651) 962 5000</a> <a class="ust-footer-row footer-email" data-category="Global Footer Link" data-action="Email Webmaster" data-label="Email" href="mailto:webmaster@stthomas.edu"><span itemprop="email">webmaster@stthomas.edu</span></a>
-                            <a class="ust-footer-row report-a-problem" data-category="Global Footer Link" data-action="Click" data-label="Report a Problem" href="http://stthomasirt.co1.qualtrics.com/jfe/form/SV_9p44Ac9SFtUnGdv" target="_blank">Report a Website Problem</a>
-                        </div>
-                        <div class="ust-column small-spacing" id="ustFooterCopy">
-                            &#169; <span id="copyDate">2016</span> University of St. Thomas, Minnesota
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <site:googleAnalyticsTracking />
-        </apex:insert>
-    </footer>
+    </div>
     <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/loading.js')}" type="text/javascript"/>
     </body>
     </html>
