--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -73,8 +73,11 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <apex:outputText escape="false" value="{!eventPage.Event_Confirmation_Description__c}"/>
                             </p>
                         </div>
-                        <apex:outputPanel layout="block" rendered="{!hasFees}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
-                            <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">Payment Received</h3>
+                        <apex:outputPanel layout="block" rendered="{!eventFees.size > 0}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
+
+                            <outputPanel layout="none" rendered="{!paymentReceived}">
+                                <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">Payment Received</h3>
+                            </outputPanel>
 
                             <table class="slds-table slds-table_cell-buffer slds-table_bordered">
                                 <thead>
@@ -127,7 +130,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     </tr>
                                 </apex:outputPanel>
                                 <tr class="eventTotalCost">
-                                    <td class="slds-cell_action-mode"><strong>{!IF(ISBLANK(eventPage.Event_Fee_Total_Label__c),'Event Cost', eventPage.Event_Fee_Total_Label__c)}</strong></td>
+                                    <td class="slds-cell_action-mode"><strong>{!IF(ISBLANK(eventPage.Event_Fee_Total_Label__c),'Balance Due', eventPage.Event_Fee_Total_Label__c)}</strong></td>
                                     <td class="slds-text-align_right slds-cell_action-mode">
                                         <strong>
                                             <apex:outputText value="${0,number,###,###,###,##0.00}">
