--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -73,15 +73,24 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <apex:outputText escape="false" value="{!eventPage.Event_Confirmation_Description__c}"/>
                             </p>
                         </div>
-                        <apex:outputPanel layout="block" rendered="{!eventFees.size > 0}" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1">
 
-                            <outputPanel layout="none" rendered="{!paymentReceived}">
-                                <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">Payment Received</h3>
-                            </outputPanel>
+                        <apex:outputPanel layout="block" rendered="{!eventFees.size > 0}" styleClass="slds-col slds-p-vertical_x-small slds-size_1-of-1">
 
-                            <outputPanel layout="none" rendered="{!!paymentReceived}">
-                                <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">Payment Due</h3>
-                            </outputPanel>
+                            <apex:outputPanel layout="none" rendered="{!paymentReceived}">
+                                <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">{!IF(!ISBLANK(eventPage.Event_Payment_Received_Heading_Label__c), eventPage.Event_Payment_Received_Heading_Label__c, "Payment Received")}</h3>
+                                <apex:outputPanel layout="none" rendered="{!!ISBLANK(eventPage.Event_Payment_Received_Description__c)}">
+                                    <p class="slds-text-body slds-p-vertical_x-small">
+                                        <apex:outputText escape="false" value="{!EventPage.Event_Payment_Received_Description__c}"/>
+                                    </p>
+                                </apex:outputPanel>
+                            </apex:outputPanel>
+
+                            <apex:outputPanel layout="none" rendered="{!!paymentReceived}">
+                                <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">{!IF(!ISBLANK(eventPage.Event_Payment_Due_Heading_Label__c), eventPage.Event_Payment_Due_Heading_Label__c, "Payment Due")}</h3>
+                                <apex:outputPanel layout="block" rendered="{!!ISBLANK(eventPage.Event_Payment_Due_Description__c)}" styleClass="slds-text-body slds-p-vertical_small">
+                                    <apex:outputText escape="false" value="{!EventPage.Event_Payment_Due_Description__c}"/>
+                                </apex:outputPanel>
+                            </apex:outputPanel>
 
                             <table class="slds-table slds-table_cell-buffer slds-table_bordered">
                                 <tbody>
